test/libsolidity/syntaxTests/nameAndTypeResolution/556_no_address_members_on_contract_call.sol
contract C {
    function f() public {
        this.call;
    }
}
// ----
// TypeError: (47-56): Member "call" not found or not visible after argument-dependent lookup in contract C
